Business lite Changelog

****************************

Version 3.0.3 (03-19-12)
-Added French translation files.

Version 3.0.2 (03-13-12)
-Fixed bug with archive template. 
-Widgetized Box element bug fix.

Version 3.0.1 (03-08-12)
-Removed PressTrends function.
-Fixed bug where slider height doesn't resize correctly.
-Removed some unecessary CSS and scripts.
-Conditional to not display breadcrumb links on attachment pages. 
-Fixed fatal error on pages. 

Version 3.0 (03-07-12)
-Moved to CyberChimps Response Core Framework based codebase.
-Moved to Foundation Responsive CSS grid.
-Added Slider, Callout and Widgetized Boxes Page Elements.
-Added Front Page template.
-Added Templates Theme Options.
-Added localization support with built-in support for German, Dutch and Portuguese. 

Version 2.1.2 (01-05-12)
-Fixed broken upgrade link.

Version 2.1.1 (12-12-11)
-Visual fix to theme options for WordPress 3.3 compatibility. 
-Fixed jQuery call for WordPress 3.3 compatibility. 

Version 2.1 (11-02-11)
-Cleaned up HTML element styling.
-Removed extra display of comments from index.
-Added post page links to index. 
-Removed border on sidebar, added bottom border to posts instead. 
-Changed font family to websafe Arial, Helvetica, serif. 
-Fixed image alignment issue.
-Added breadcrumb support. 

Version 2.0.1 (9-8-11)
-Updated Nivo Slider to 2.6.
-Enqueueing WP jQuery library again en lieu of Nivo Slider update. 
-Footer and Sidebar widgets now within a function that hooks into widgets_init.
-Now stripping HTML from several option URL inputs. 
-Added trailing slashes to default social icon URLs.
-Added height and width element to social icons.
-Fixed floats not clearing on images. 
-Removed unnecessary text domain properties in options.php.
-Added link to theme options settings in the Admin bar.

Version 2.0 (8-9-11)
-Updated 404 page, added custom image.
-Adjusted styling on archive pages.
-Updated functions.php, added new scripts and cleaned up some existing functions.