@@ -101,6 +101,7 @@ $options
 			->text($themeslug."_front_slide_two_url", "Slide Two Link", array('default' => 'http://cyberchimps.com/businesspro/'))
 			->upload($themeslug."_front_slide_three_image", "Slide Three", array('default' => array('url' => TEMPLATE_URL . '/images/slide_default_3.jpg')))
 			->text($themeslug."_blog_slide_three_url", "Slide Three Link", array('default' => 'http://cyberchimps.com'))
+			->checkbox($themeslug."_front_hide_slider_arrows", "Slider Arrows", array('default' => true))
 		->subsection_end()
 		->subsection("Callout")
 			->textarea($themeslug."_front_callout_text", "Enter your Callout text")
@@ -125,6 +126,7 @@ $options
 			->text($themeslug."_blog_slide_two_url", "Slide Two Link", array('default' => 'http://cyberchimps.com'))
 			->upload($themeslug."_blog_slide_three_image", "Slide Three", array('default' => array('url' => TEMPLATE_URL . '/images/slide_default_3.jpg')))
 			->text($themeslug."_blog_slide_three_url", "Slide Three Link", array('default' => 'http://cyberchimps.com'))
+			->checkbox($themeslug."_blog_hide_slider_arrows", "Slider Arrows", array('default' => true))
 		->subsection_end()
 		->subsection("Callout Options")
 			->textarea($themeslug."_blog_callout_text", "Enter your Callout text")
