@@ -4,6 +4,8 @@ Business lite Changelog
 
 Version 3.0.3 (03-19-12)
 -Added French translation files.
+-Added option to disable slider navigation arrows. 
+-Updated search template code.
 
 Version 3.0.2 (03-13-12)
 -Fixed bug with archive template. 
